--- a/styles/containers/Contact.module.scss
+++ b/styles/containers/Contact.module.scss
@@ -72,6 +72,11 @@
         width: 120px;
         background-color:var(--Dark-blue);
         outline: none;
+        flex-direction:row;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        gap: 10px;
         border: none;
         border-radius: 8px;
         font-family: 'Poppins', sans-serif;
@@ -85,6 +90,13 @@
         &:hover{
             filter: brightness(90%);
             transform: translateY(-5px);
+        }
+
+        &:disabled{
+            cursor:not-allowed;
+            padding: 0px 5px;
+            width: 130px;
+            filter: brightness(50%);
         }
     }
 }
@@ -166,6 +178,9 @@
         button {
             width: 110px;
             height:45px;
+        }
+        &:disabled{
+            width: 110px;
         }
     }
 
