--- a/styles/containers/Header.module.scss
+++ b/styles/containers/Header.module.scss
@@ -1,41 +1,77 @@
 .container {
-    position: fixed;
-    width: 100%;
-    height: 10vh;
-    justify-content: center;
-    align-items: center;
     display: flex;
-    z-index: 10;
-    gap: 40px;
-    
+    position: fixed;
+    right: 0;
+    top: 0;
+    gap: 4rem;
+    width: 100%;
+    padding: 2rem 3rem 2rem 3rem;
+    justify-content: center;
     transition: 0.5s;
 
-    a {
-        font-size: 1.3rem;
-        font-family: 'Ubuntu', sans-serif;
-        font-weight: bold;
-        color: var(--Dark-blue);
+    z-index: 10;
 
-        cursor: pointer;
+    .content, .active{
+        display: flex;
+        gap: 4rem;
+        a {
+            font-size: 1.3rem;
+            font-family: 'Ubuntu', sans-serif;
+            font-weight: bold;
+            color: var(--Dark-blue);
 
-        &::after{
-            content: '';
-            display: block;
-            border-bottom: solid 3px var(--Orange);  
-            transform: scaleX(0);  
-            transition: transform 250ms ease-in-out;
-        }  
-        &:hover::after{
-            transform: scaleX(1);
-        }  
+            cursor: pointer;
+
+            &::after{
+                content: '';
+                display: block;
+                border-bottom: solid 3px var(--Orange);  
+                transform: scaleX(0);  
+                transition: transform 250ms ease-in-out;
+            }  
+            &:hover::after{
+                transform: scaleX(1);
+            }  
+        }
+    }
+
+    .hamburguer{
+        display: none;
     }
 }
 
 @media (max-width: 1400px){
-    .container {
-        a {
-            font-size: 1rem;
-            
+    .container{
+        .content {
+            a {
+                font-size: 1rem;               
+            }
         }
     }
+}
+
+@media (max-width: 800px){
+    .container{
+        flex-direction: column-reverse;
+        .hamburguer{
+            display: flex;
+            align-self: flex-end;
+            border: none;
+            background-color: transparent;
+        }
+        .content {
+            display: none;
+            flex-direction:column;
+        }
+        .active{
+
+            display: flex;
+            flex-direction:column;
+            gap: 2rem;
+            align-items: center;
+        }      
+    }
+    
+    
+    
 }
