--- a/styles/containers/Contact.module.scss
+++ b/styles/containers/Contact.module.scss
@@ -7,6 +7,7 @@
     flex-direction: row;   
     padding:30px 0px;
     background-color:var(--Light-blue);
+    box-shadow: inset 0px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .content{
