--- a/styles/components/CardDepositions.module.scss
+++ b/styles/components/CardDepositions.module.scss
@@ -9,14 +9,21 @@
     border-radius: 30px;
     padding: 20px 25px;
     
-        
+    .header{
+        height:10%;
+        margin: 0;
+        padding: 0;
+        width:100%;
+    }
     h1 {
         margin: 0;
         padding: 0;
         color: white;
+        width:100%;
         font-family: 'Ubuntu', sans-serif;
         font-weight: 600;
         font-size: 1.9rem;
+        height:100%;      
     }
 
     p {
@@ -26,6 +33,12 @@
         font-size: 1rem;
         line-height: 1.8rem;
         text-align: justify;
+        overflow-y: auto;
+        height:70%;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 
 }
@@ -34,6 +47,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    height:20%;
     align-items:center;
 
     img{
@@ -48,6 +62,7 @@
 
     h2{
         margin: 0;
+        font-size: 1.8rem;
         color: white;
         font-family: 'Poppins', sans-serif;
         font-weight: 500;
@@ -83,7 +98,7 @@
         h2{
             margin: 0;
             color: white;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-family: 'Poppins', sans-serif;
             font-weight: 500;
         }
