--- a/styles/components/CardDepositions.module.scss
+++ b/styles/components/CardDepositions.module.scss
@@ -1,136 +1,124 @@
-.container {
+.containerFeedback{
     display: flex;
     flex-direction: column;
-    height: 530px;
-    width: 450px;
-    background-color: rgba(231, 223, 221, 0.1);
-    align-items: flex-start;
-    justify-content: space-around;
-    border-radius: 30px;
-    padding: 20px 25px;
-    
-    .header{
-        height:10%;
-        margin: 0;
-        padding: 0;
-        width:100%;
-    }
-    h1 {
-        margin: 0;
-        padding: 0;
-        color: white;
-        width:100%;
-        font-family: 'Ubuntu', sans-serif;
-        font-weight: 600;
-        font-size: 1.9rem;
-        height:100%;      
-    }
-
-    p {
-        color: white;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500;
-        font-size: 1rem;
-        line-height: 1.8rem;
-        text-align: justify;
-        overflow-y: auto;
-        height:70%;
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-    }
-
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
 
-.info {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height:20%;
-    align-items:center;
+.feedbackProfileImage{
+    position: relative;
+    margin-bottom: 30px;
 
     img{
-        width:70px;
-        height:70px;
+        width: 100px !important;
+        height: 100px !important;
         border-radius: 50%;
+        @media(max-width: 790px){
+          width: 60px !important;
+          height: 60px !important;
+        }
+        @media(max-width: 400px){
+          width: 40px !important;
+          height: 40px !important;
+        }
+        @media(max-width: 350px){
+          width: 30px !important;
+          height: 30px !important;
+        }
+    }
+    &::after{
+        background-color: white;
+        width: 30px;
+        height: 30px;
+
+        @media(max-width: 790px){
+          width: 20px !important;
+          height: 20px !important;
+        }
+        @media(max-width: 400px){
+          width: 15px !important;
+          height: 15px !important;
+        }
+        @media(max-width: 350px){
+          width: 10px !important;
+          height: 10px !important;
+        }
+
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: -1px;
+        right: -1px;
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 50%;
+        font-size: 13px;
+        font-weight: 700;
+        color: black;
+        content: '';
+        background-image: url("../../public/aspas2.svg");
+        background-repeat: no-repeat;
+
+        background-size: cover;
+        display: flex;
     }
 }
 
-.title {
-    margin-left: 20px;
-
-    h2{
-        margin: 0;
-        font-size: 1.8rem;
-        color: white;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500;
+.feedbackProfileText{
+    font-size: 1.4rem;
+    padding: 2px 16px;
+    display: flex;
+    width: 60%;
+    word-break: break-all;
+    text-align: justify;
+    color:white;
+    margin-bottom: 10px;
+    font-family: 'Poppins', sans-serif;
+    @media(max-width: 450px){
+        font-size: 0.9rem;
     }
-    h3{
-        margin: 0;
-        color: #909090;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500;
+    @media(max-width: 400px){
+        font-size: 0.8rem;
     }
-}
-
-@media (max-width: 1400px){
-    .container {
-        height: 530px;
-        width: 330px;
-        padding: 25px 30px;
-        h1 {
-            font-size: 1.6rem;
-        }
-    
-        p {
-            font-size: 0.8rem;
-        }
-    }  
-    .info {
-        img{
-            width:60px;
-            height:60px;
-        }
-    }
-    .title {
-        h2{
-            margin: 0;
-            color: white;
-            font-size: 1.1rem;
-            font-family: 'Poppins', sans-serif;
-            font-weight: 500;
-        }
-        h3{
-            margin: 0;
-            color: #909090;
-            font-size: 1.0rem;
-            font-family: 'Poppins', sans-serif;
-            font-weight: 500;
-        }
+    @media(max-width: 350px){
+        font-size: 0.7rem;
     }
 }
 
+.feedbackName{
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  position: relative;
+  font-family: 'Ubuntu', sans-serif;
+  color: white;
+  span{
+    font-size: 1.2rem;
+    color: #909090;
+    font-weight: normal;
+    text-transform: none;
+    @media(max-width: 790px){
+      font-size: 1.0rem;
+    }
+    @media(max-width: 450px){
+      font-size: 0.7rem;
+    }
+    @media(max-width: 400px){
+      font-size: 0.6rem;
+    }
 
-@media (max-width: 600px){
-    .container {
-        h1 {
-            font-size: 1.4rem;
-        }
-    }  
-    .info {
-        img{
-            width:40px;
-            height:40px;
-        }
-    }
-    .title {
-        h2{
-            font-size: 1.2rem;
-        }
-        h3{
-            font-size: 0.9rem;
-        }
-    }
+  }
+  margin-bottom: 40px;
+  margin-top: 10px;
+
+  @media(max-width: 790px){
+    font-size: 1.0rem;
+  }
+  @media(max-width: 450px){
+    font-size: 0.7rem;
+  }
+  @media(max-width: 400px){
+    font-size: 0.6rem;
+  }
 }
