--- a/styles/components/CardDepositions.module.scss
+++ b/styles/components/CardDepositions.module.scss
@@ -6,6 +6,10 @@
     padding: 10px;
     width: 100%;
     height: 100%;
+    @media(max-width: 650px){
+      padding: 3px;
+    }
+    
 }
 
 .feedbackProfileImage{
@@ -24,10 +28,7 @@
           width: 40px !important;
           height: 40px !important;
         }
-        @media(max-width: 350px){
-          width: 30px !important;
-          height: 30px !important;
-        }
+        
     }
     &::after{
         background-color: white;
@@ -71,20 +72,24 @@
     padding: 2px 16px;
     display: flex;
     width: 60%;
-    word-break: break-all;
+    word-break: break-word;
     text-align: justify;
     color:white;
     margin-bottom: 10px;
     font-family: 'Poppins', sans-serif;
+    @media(max-width: 590px){
+      font-size: 1rem;
+  }
     @media(max-width: 450px){
         font-size: 0.9rem;
     }
     @media(max-width: 400px){
-        font-size: 0.8rem;
-    }
-    @media(max-width: 350px){
         font-size: 0.7rem;
     }
+    @media(max-width: 350px){
+        font-size: 0.6rem;
+    }
+    
 }
 
 .feedbackName{
@@ -97,6 +102,7 @@
     font-size: 1.2rem;
     color: #909090;
     font-weight: normal;
+
     text-transform: none;
     @media(max-width: 790px){
       font-size: 1.0rem;
@@ -121,4 +127,5 @@
   @media(max-width: 400px){
     font-size: 0.6rem;
   }
+  
 }
