--- a/styles/components/CardService.module.scss
+++ b/styles/components/CardService.module.scss
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 20rem;
     height: 25rem;
     flex-direction: column;
@@ -12,56 +12,44 @@
     transition: 0.5s;
     
     &:hover {
-        transform: scale(1.1);
+        cursor: pointer;
     }
-
-    img {
-        width: 100px;
-    }
+    
 
     h1 {
         font-family: 'Poppins', sans-serif;
-        font-size: 2rem;
+        font-size: 1.7rem;
         font-weight: 500;
         color: white;
         margin:0;
-        margin-top: 20px
+        margin-top: 20px;
+        text-align: center;
     }
 
     p {
         font-family: 'Poppins', sans-serif;
-        font-size: 1rem;
+        font-size: 1.2rem;
         color: white;
         text-align: justify;
-        margin:10px;
-    }
-}
+        margin: 10px;
 
-@media (max-width: 1600px){
-    .container {
-        width: 18rem;
-        height: 23rem;
-
-        img {
-            width: 90px;
-        }
-        h1 {
-            font-size: 1.9rem;        
+        &:hover {
+            text-decoration: underline;
         }
     }
 }
 
-@media (max-width: 1400px){
+@media (max-width: 1280px){
     .container {
-        width: 16rem;
-        height: 21rem;
+        width: 15rem;
+        height: 19rem;
 
-        img {
-            width: 70px;
-        }
         h1 {
-            font-size: 1.8rem;        
+            font-size: 1.2rem;       
+        }
+
+        p {
+            font-size: 0.8rem;
         }
     }
-
 }
