--- a/styles/containers/Videos.module.scss
+++ b/styles/containers/Videos.module.scss
@@ -24,6 +24,7 @@
 .content {
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   display: flex;
   max-width: 1280px;
   width: 100%;
