--- a/styles/containers/Contact.module.scss
+++ b/styles/containers/Contact.module.scss
@@ -133,7 +133,7 @@
         color: var(--Dark-blue);
 
         img{
-            width:40px;
+            min-width:40px !important;
         }
     }
 
@@ -143,7 +143,7 @@
         margin-bottom: 50px;
         a{
             img {
-                width: 48px;
+                min-width: 48px !important;
             }
 
             margin: 0;
