--- a/styles/containers/Header.module.scss
+++ b/styles/containers/Header.module.scss
@@ -14,7 +14,9 @@
     .content, .active{
         display: flex;
         gap: 2.2rem;
-        a {
+        button {
+            background: none;
+            border: none;
             font-size: 1.3rem;
             font-family: 'Ubuntu', sans-serif;
             font-weight: bold;
