--- a/styles/containers/Header.module.scss
+++ b/styles/containers/Header.module.scss
@@ -14,7 +14,7 @@
     .content, .active{
         display: flex;
         gap: 2.2rem;
-        button {
+        button, a {
             background: none;
             border: none;
             font-size: 1.3rem;
