--- a/styles/containers/Videos.module.scss
+++ b/styles/containers/Videos.module.scss
@@ -11,12 +11,18 @@
   justify-content:space-around;
   align-items:center;
   width: 100%;
+  flex-direction: row;
 
   h1 {
       color: white;
       font-family: 'Poppins', sans-serif;
       font-weight: 600;
       font-size: 3rem;
+  }
+
+  @media (max-width: 1050px){
+    flex-direction: column-reverse !important;
+    margin-bottom: 30px;
   }
   
 }
@@ -53,13 +59,6 @@
       h1 {
           font-size: 2.5rem;
       }
-  }
-}
-
-@media (max-width: 1000px){
-  .header {
-      flex-direction: column;
-      margin-bottom: 30px;
   }
 }
 
