--- a/styles/containers/Main.module.scss
+++ b/styles/containers/Main.module.scss
@@ -80,6 +80,16 @@
     }
 }
 
+@media (max-width: 992px) {
+    .texts {
+        button {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            width: 100%;
+        }
+    }
+}
+
 @media (max-width: 1400px){
     .texts {
         p {
