--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,6 +1,6 @@
 .buttonGlobal{
-    width:50px;
-    height:50px;
+    width:60px;
+    height:60px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,7 @@
     margin-bottom: 50px;
     border-radius: 50%;
     border: none;
-    background-color:var(--Orange);
+    background-color: #25D366;
     transition: 0.5s;
     cursor: pointer;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
