--- a/styles/containers/Blogs.module.scss
+++ b/styles/containers/Blogs.module.scss
@@ -49,7 +49,10 @@
     flex-direction: row;
     width: 80%;
     min-height: 200px;
-    padding: 5px;
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+
     background-color: white;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
     cursor: pointer;
@@ -71,11 +74,12 @@
 
 .imageWrapper {
     width: 300px;
-    height: 200px;
+    min-height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    
 
     @media (max-width: 520px){
         width: 200px;
@@ -88,7 +92,7 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    padding: 15px;  
+    padding: 15px 25px;  
 
     p {
         margin: 0;
@@ -133,6 +137,7 @@
     h1{
         margin: 0;
         font-family: 'Poppins', sans-serif;
+        font-size: 1.5rem;
 
         @media (max-width: 520px){
             text-align: center;
